Fix alignment issues with vendor and customer form

--- a/src/app/modules/employee/components/employee-detail/employee-detail.component.scss
+++ b/src/app/modules/employee/components/employee-detail/employee-detail.component.scss
@@ -1,15 +1,16 @@
 @import "_base";
 
 textarea,
-input {
+input,
+select {
   appearance: none;
   border: none;
   width: 100%;
 
-  &:disabled {
-    background-color: $disabled-input-bg;
-    color: $white;
-  }
+  // &:disabled {
+  background-color: $disabled-input-bg;
+  color: $white;
+  // }
 }
 
 textarea {
