--- a/src/app/modules/vendor-and-customer/components/vendor-and-customer-detail/vendor-and-customer-detail.component.scss
+++ b/src/app/modules/vendor-and-customer/components/vendor-and-customer-detail/vendor-and-customer-detail.component.scss
@@ -1,15 +1,16 @@
 @import "_base";
 
 textarea,
-input {
+input,
+select {
   appearance: none;
   border: none;
   width: 100%;
 
-  &:disabled {
-    background-color: $disabled-input-bg;
-    color: $white;
-  }
+  // &:disabled {
+  background-color: $disabled-input-bg;
+  color: $white;
+  // }
 }
 
 textarea {
@@ -29,6 +30,6 @@ textarea {
   width: 220px;
   height: 280px;
 }
-#editselect-box{
+#editselect-box {
   width: 100%;
 }
